feat: 更新获取用户信息入参和刷新token方式
